plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openrewrite.rewrite' version '7.23.0'
}

group = 'navrat.name'
version = '0.0.1-SNAPSHOT'
description = 'Synchronizace transakcí z Moneta na Lezeni'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-kafka'
    implementation "org.springframework.boot:spring-boot-starter-restclient:4.0.1"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    //needed by Kafka
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'tools.jackson.core:jackson-databind'
    implementation 'tools.jackson.core:jackson-databind'
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:7.1'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:7.1:jpa'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    rewrite 'org.openrewrite.recipe:rewrite-spring:6.22.1'
    rewrite 'org.openrewrite.recipe:rewrite-static-analysis:1.19.0'
}

rewrite {
    activeRecipe(
            'org.openrewrite.java.format.NormalizeTabsOrSpaces',
            'org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0',
            'org.openrewrite.staticanalysis.CommonStaticAnalysis'
    )
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {jvmArgs("-XX:+EnableDynamicAgentLoading")
}
